tests/snapshots/datatype_generator_tests__datatypes_index.snap
---
source: tests/datatype_generator_tests.rs
expression: output
---
export * from './Address';
export * from './HumanName';
export * from './Quantity';
