tests/snapshots/datatype_generator_tests__human_name_file_complete.snap
---
source: tests/datatype_generator_tests.rs
expression: output
---
import { Element } from '.';
/**
 * Name of a human - parts and usage
 * 
 * A human's name with the ability to identify parts and usage.
 * 
 * @see http://hl7.org/fhir/StructureDefinition/HumanName
 */
export interface HumanName extends Element {
  use?: string;
  text?: string;
  family?: string;
  given?: string[];
  prefix?: string[];
  suffix?: string[];
}
