tests/snapshots/datatype_generator_tests__primitive_types_with_wrapper.snap
---
source: tests/datatype_generator_tests.rs
expression: output
---
/**
 * FHIR Primitive Type Definitions
 * 
 * These types wrap native TypeScript primitives to support FHIR extensions.
 */
import { Extension } from './types/Extension';
/**
 * FHIR Primitive wrapper type
 * 
 * Wraps primitive values to support FHIR extensions and element properties.
 * 
 * @template T - The primitive value type
 */
export interface FhirPrimitive<T> {
  /** The actual primitive value */
  value?: T;
  /** Unique id for inter-element referencing */
  id?: string;
  /** Additional content defined by implementations */
  extension?: Extension[];
}

/**
 * true | false
 */
export type FhirBoolean = FhirPrimitive<boolean>;
/**
 * A sequence of Unicode characters
 */
export type FhirString = FhirPrimitive<string>;
